AsciidoctorJ: upgrade from 1.5 to 1.6
Signed-off-by: Christoph Obexer <cobexer@gradle.com>